--- a/pom.xml
+++ b/pom.xml
@@ -140,6 +140,72 @@
 
 	<maven.compiler.source>11</maven.compiler.source>
 	<maven.compiler.target>11</maven.compiler.target>
+
+	<amqp-client.version>4.8.0</amqp-client.version>
+	<animal-sniffer-annotations.version>1.17</animal-sniffer-annotations.version>
+	<boofcv.version>0.33</boofcv.version>
+	<bcprov.version>1.66</bcprov.version>
+	<bcpkix.version>1.66</bcpkix.version>
+	<classindex.version>3.9</classindex.version>
+	<checker-qual.version>2.5.2</checker-qual.version>
+	<commons-math3.version>3.6.1</commons-math3.version>
+	<commons-compress.version>1.21</commons-compress.version>
+	<commons-text.version>1.4</commons-text.version>
+	<commons-pool2.version>2.9.0</commons-pool2.version>
+	<ditto-client.version>1.0.0</ditto-client.version>
+	<data-generator.version>1.4.1</data-generator.version>
+	<ddogleg.version>0.16</ddogleg.version>
+	<errorprone-annotations.version>2.2.0</errorprone-annotations.version>
+	<google-maps-services.version>0.10.0</google-maps-services.version>
+	<graalvm.js.version>21.3.0</graalvm.js.version>
+	<iotdb.version>0.12.0</iotdb.version>
+	<java-websocket.version>1.5.0</java-websocket.version>
+	<javax-websocket-client-api.version>1.1</javax-websocket-client-api.version>
+	<jsrosbridge.version>0.2.0</jsrosbridge.version>
+	<jedis.version>3.3.0</jedis.version>
+	<j2objc-annotations.version>1.3</j2objc-annotations.version>
+	<language-detector.version>0.6</language-detector.version>
+	<log4j-to-slf4j.version>2.8.2</log4j-to-slf4j.version>
+	<lombok.version>1.18.22</lombok.version>
+	<mailapi.version>1.4.3</mailapi.version>
+	<metrics-core.version>3.1.2</metrics-core.version>
+	<nekohtml.version>1.9.13</nekohtml.version>
+	<netty-resolver.version>4.1.72.Final</netty-resolver.version>
+	<okhttp.version>3.13.1</okhttp.version>
+	<opennlp.version>1.9.0</opennlp.version>
+	<postgresql.version>42.4.1</postgresql.version>
+	<pulsar.version>2.10.1</pulsar.version>
+	<quartz.version>2.3.2</quartz.version>
+	<scala-lang.version>2.11.12</scala-lang.version>
+	<scala-parser-combinators.version>1.1.1</scala-parser-combinators.version>
+	<slack-api.version>1.2.0</slack-api.version>
+	<snakeyaml.version>1.26</snakeyaml.version>
+	<xerces.version>2.12.2</xerces.version>
+	<zstd-jni.version>1.4.3-1</zstd-jni.version>
+
+	<maven-shade-plugin.version>3.2.4</maven-shade-plugin.version>
+	<maven.javadoc.plugin.version>3.1.1</maven.javadoc.plugin.version>
+
+	<!-- Connect Dependencies-->
+	<animal-sniffer-annotations.version>1.17</animal-sniffer-annotations.version>
+	<bcprov.version>1.68</bcprov.version>
+	<checker-qual.version>2.5.2</checker-qual.version>
+	<commons-collections4.version>4.4</commons-collections4.version>
+	<commons-text.version>1.8</commons-text.version>
+	<errorprone-annotations.version>2.2.0</errorprone-annotations.version>
+	<java-websocket.version>1.4.0</java-websocket.version>
+	<javax-websocket-client-api.version>1.1</javax-websocket-client-api.version>
+	<jcl-over-slf4j.version>1.7.30</jcl-over-slf4j.version>
+	<jsrosbridge.version>0.2.0</jsrosbridge.version>
+	<influxdb.java.version>2.14</influxdb.java.version>
+	<eclipse.milo.version>0.6.3</eclipse.milo.version>
+	<mysql-binlog-connector.version>0.18.1</mysql-binlog-connector.version>
+	<mysql-connector-java.version>8.0.28</mysql-connector-java.version>
+	<netty.version>4.1.72.Final</netty.version>
+	<nimbus-jose-jwt.version>7.9</nimbus-jose-jwt.version>
+	<opencsv.version>5.5.2</opencsv.version>
+	<plc4x.version>0.9.1</plc4x.version>
+	<protobuf.version>3.16.3</protobuf.version>
 </properties>
 
 <name>Apache StreamPipes (incubating)</name>
@@ -900,6 +966,386 @@ IoT data streams.
 					<artifactId>rest-assured</artifactId>
 					<version>${rest-assured.version}</version>
 					<scope>test</scope>
+				</dependency>
+        <dependency>
+          <groupId>io.flinkspector</groupId>
+          <artifactId>flinkspector-datastream_2.11</artifactId>
+          <version>0.9.4</version>
+          <scope>test</scope>
+        </dependency>
+        <dependency>
+          <groupId>org.apache.flink</groupId>
+          <artifactId>flink-test-utils_2.11</artifactId>
+          <version>${flink.version}</version>
+          <exclusions>
+            <exclusion>
+              <groupId>org.apache.logging.log4j</groupId>
+              <artifactId>log4j-slf4j-impl</artifactId>
+            </exclusion>
+          </exclusions>
+        </dependency>
+        <dependency>
+          <groupId>org.apache.flink</groupId>
+          <artifactId>flink-runtime_2.11</artifactId>
+          <version>${flink.version}</version>
+          <type>test-jar</type>
+        </dependency>
+
+				<!-- Extensions dependencies -->
+				<dependency>
+					<groupId>org.antlr</groupId>
+					<artifactId>antlr4-runtime</artifactId>
+					<version>4.9</version>
+				</dependency>
+				<dependency>
+					<groupId>io.netty</groupId>
+					<artifactId>netty-handler</artifactId>
+					<version>4.1.72.Final</version>
+				</dependency>
+				<dependency>
+					<groupId>org.apache.qpid</groupId>
+					<artifactId>proton-j</artifactId>
+					<version>0.30.0</version>
+				</dependency>
+				<dependency>
+					<groupId>com.google.inject</groupId>
+					<artifactId>guice</artifactId>
+					<version>4.1.0</version>
+					<scope>test</scope>
+				</dependency>
+				<dependency>
+					<groupId>org.scala-lang.modules</groupId>
+					<artifactId>scala-xml_2.11</artifactId>
+					<version>1.0.5</version>
+					<scope>test</scope>
+				</dependency>
+				<!-- External Connect dependencies -->
+				<dependency>
+					<groupId>com.github.shyiko</groupId>
+					<artifactId>mysql-binlog-connector-java</artifactId>
+					<version>${mysql-binlog-connector.version}</version>
+				</dependency>
+				<dependency>
+					<groupId>com.google.j2objc</groupId>
+					<artifactId>j2objc-annotations</artifactId>
+					<version>${j2objc-annotations.version}</version>
+				</dependency>
+				<dependency>
+					<groupId>edu.wpi.rail</groupId>
+					<artifactId>jrosbridge</artifactId>
+					<version>${jsrosbridge.version}</version>
+				</dependency>
+				<dependency>
+					<groupId>io.netty</groupId>
+					<artifactId>netty-resolver</artifactId>
+					<version>${netty-resolver.version}</version>
+				</dependency>
+				<dependency>
+					<groupId>javax.websocket</groupId>
+					<artifactId>javax.websocket-api</artifactId>
+					<version>${javax-websocket-client-api.version}</version>
+				</dependency>
+				<dependency>
+					<groupId>org.apache.commons</groupId>
+					<artifactId>commons-collections4</artifactId>
+					<version>${commons-collections4.version}</version>
+				</dependency>
+				<dependency>
+					<groupId>org.apache.commons</groupId>
+					<artifactId>commons-compress</artifactId>
+					<version>${commons-compress.version}</version>
+				</dependency>
+				<dependency>
+					<groupId>org.apache.commons</groupId>
+					<artifactId>commons-text</artifactId>
+					<version>${commons-text.version}</version>
+				</dependency>
+				<dependency>
+					<groupId>org.bouncycastle</groupId>
+					<artifactId>bcprov-jdk14</artifactId>
+					<version>${bcprov.version}</version>
+				</dependency>
+				<dependency>
+					<groupId>org.bouncycastle</groupId>
+					<artifactId>bcprov-jdk15on</artifactId>
+					<version>${bcprov.version}</version>
+				</dependency>
+				<dependency>
+					<groupId>org.bouncycastle</groupId>
+					<artifactId>bcpkix-jdk15on</artifactId>
+					<version>${bcpkix.version}</version>
+				</dependency>
+				<dependency>
+					<groupId>org.checkerframework</groupId>
+					<artifactId>checker-qual</artifactId>
+					<version>${checker-qual.version}</version>
+				</dependency>
+				<dependency>
+					<groupId>org.codehaus.mojo</groupId>
+					<artifactId>animal-sniffer-annotations</artifactId>
+					<version>${animal-sniffer-annotations.version}</version>
+				</dependency>
+				<dependency>
+					<groupId>org.eclipse.milo</groupId>
+					<artifactId>sdk-client</artifactId>
+					<version>${eclipse.milo.version}</version>
+				</dependency>
+				<dependency>
+					<groupId>org.graalvm.js</groupId>
+					<artifactId>js</artifactId>
+					<version>${graalvm.js.version}</version>
+				</dependency>
+				<dependency>
+					<groupId>org.graalvm.js</groupId>
+					<artifactId>js-scriptengine</artifactId>
+					<version>${graalvm.js.version}</version>
+				</dependency>
+
+				<dependency>
+					<groupId>org.java-websocket</groupId>
+					<artifactId>Java-WebSocket</artifactId>
+					<version>${java-websocket.version}</version>
+				</dependency>
+				<dependency>
+					<groupId>org.projectlombok</groupId>
+					<artifactId>lombok</artifactId>
+					<version>${lombok.version}</version>
+				</dependency>
+				<dependency>
+					<groupId>org.slf4j</groupId>
+					<artifactId>jcl-over-slf4j</artifactId>
+					<version>${jcl-over-slf4j.version}</version>
+				</dependency>
+				<dependency>
+					<groupId>mysql</groupId>
+					<artifactId>mysql-connector-java</artifactId>
+					<version>${mysql-connector-java.version}</version>
+				</dependency>
+				<dependency>
+					<groupId>io.netty</groupId>
+					<artifactId>netty-buffer</artifactId>
+					<version>${netty.version}</version>
+				</dependency>
+				<dependency>
+					<groupId>io.netty</groupId>
+					<artifactId>netty-codec</artifactId>
+					<version>${netty.version}</version>
+				</dependency>
+				<dependency>
+					<groupId>io.netty</groupId>
+					<artifactId>netty-common</artifactId>
+					<version>${netty.version}</version>
+				</dependency>
+				<dependency>
+					<groupId>io.netty</groupId>
+					<artifactId>netty-transport</artifactId>
+					<version>${netty.version}</version>
+				</dependency>
+				<dependency>
+					<groupId>com.nimbusds</groupId>
+					<artifactId>nimbus-jose-jwt</artifactId>
+					<version>${nimbus-jose-jwt.version}</version>
+				</dependency>
+				<dependency>
+					<groupId>com.opencsv</groupId>
+					<artifactId>opencsv</artifactId>
+					<version>${opencsv.version}</version>
+				</dependency>
+				<dependency>
+					<groupId>org.apache.plc4x</groupId>
+					<artifactId>plc4j-api</artifactId>
+					<version>${plc4x.version}</version>
+				</dependency>
+				<dependency>
+					<groupId>org.apache.plc4x</groupId>
+					<artifactId>plc4j-connection-pool</artifactId>
+					<version>${plc4x.version}</version>
+				</dependency>
+				<dependency>
+					<groupId>org.apache.plc4x</groupId>
+					<artifactId>plc4j-driver-s7</artifactId>
+					<version>${plc4x.version}</version>
+					<scope>runtime</scope>
+				</dependency>
+				<dependency>
+					<groupId>org.apache.plc4x</groupId>
+					<artifactId>plc4j-driver-modbus</artifactId>
+					<version>${plc4x.version}</version>
+					<scope>runtime</scope>
+				</dependency>
+				<dependency>
+					<groupId>com.google.protobuf</groupId>
+					<artifactId>protobuf-java</artifactId>
+					<version>${protobuf.version}</version>
+				</dependency>
+				<dependency>
+					<groupId>com.google.errorprone</groupId>
+					<artifactId>error_prone_annotations</artifactId>
+					<version>${errorprone-annotations.version}</version>
+				</dependency>
+
+				<!-- External dependencies -->
+				<dependency>
+					<groupId>com.github.luben</groupId>
+					<artifactId>zstd-jni</artifactId>
+					<version>${zstd-jni.version}</version>
+				</dependency>
+				<dependency>
+					<groupId>com.google.maps</groupId>
+					<artifactId>google-maps-services</artifactId>
+					<version>${google-maps-services.version}</version>
+				</dependency>
+				<dependency>
+					<groupId>com.optimaize.languagedetector</groupId>
+					<artifactId>language-detector</artifactId>
+					<version>${language-detector.version}</version>
+				</dependency>
+				<dependency>
+					<groupId>com.rabbitmq</groupId>
+					<artifactId>amqp-client</artifactId>
+					<version>${amqp-client.version}</version>
+				</dependency>
+				<dependency>
+					<groupId>com.ullink.slack</groupId>
+					<artifactId>simpleslackapi</artifactId>
+					<version>${slack-api.version}</version>
+				</dependency>
+				<dependency>
+					<groupId>io.dropwizard.metrics</groupId>
+					<artifactId>metrics-core</artifactId>
+					<version>${metrics-core.version}</version>
+				</dependency>
+				<dependency>
+					<groupId>javax.mail</groupId>
+					<artifactId>mailapi</artifactId>
+					<version>${mailapi.version}</version>
+				</dependency>
+				<dependency>
+					<groupId>net.acesinc.data</groupId>
+					<artifactId>json-data-generator</artifactId>
+					<version>${data-generator.version}</version>
+				</dependency>
+				<dependency>
+					<groupId>net.sourceforge.nekohtml</groupId>
+					<artifactId>nekohtml</artifactId>
+					<version>${nekohtml.version}</version>
+				</dependency>
+				<dependency>
+					<groupId>org.apache.commons</groupId>
+					<artifactId>commons-math3</artifactId>
+					<version>${commons-math3.version}</version>
+				</dependency>
+				<dependency>
+					<groupId>org.apache.commons</groupId>
+					<artifactId>commons-pool2</artifactId>
+					<version>${commons-pool2.version}</version>
+				</dependency>
+				<dependency>
+					<groupId>org.apache.flink</groupId>
+					<artifactId>flink-cep_2.11</artifactId>
+					<version>${flink.version}</version>
+				</dependency>
+				<dependency>
+					<groupId>org.apache.flink</groupId>
+					<artifactId>flink-cep-scala_2.11</artifactId>
+					<version>${flink.version}</version>
+				</dependency>
+				<dependency>
+					<groupId>org.apache.flink</groupId>
+					<artifactId>flink-runtime_2.11</artifactId>
+					<version>${flink.version}</version>
+				</dependency>
+				<dependency>
+					<groupId>org.apache.iotdb</groupId>
+					<artifactId>iotdb-jdbc</artifactId>
+					<version>${iotdb.version}</version>
+				</dependency>
+				<dependency>
+					<groupId>org.apache.opennlp</groupId>
+					<artifactId>opennlp-tools</artifactId>
+					<version>${opennlp.version}</version>
+				</dependency>
+				<dependency>
+					<groupId>org.apache.pulsar</groupId>
+					<artifactId>pulsar-client</artifactId>
+					<version>${pulsar.version}</version>
+				</dependency>
+				<dependency>
+					<groupId>org.atteo.classindex</groupId>
+					<artifactId>classindex</artifactId>
+					<version>${classindex.version}</version>
+				</dependency>
+				<dependency>
+					<groupId>org.boofcv</groupId>
+					<artifactId>boofcv-core</artifactId>
+					<version>${boofcv.version}</version>
+				</dependency>
+				<dependency>
+					<groupId>org.ddogleg</groupId>
+					<artifactId>ddogleg</artifactId>
+					<version>${ddogleg.version}</version>
+				</dependency>
+				<dependency>
+					<groupId>org.eclipse.ditto</groupId>
+					<artifactId>ditto-client</artifactId>
+					<version>${ditto-client.version}</version>
+				</dependency>
+				<dependency>
+					<groupId>org.elasticsearch</groupId>
+					<artifactId>elasticsearch</artifactId>
+					<version>${elasticsearch.version}</version>
+				</dependency>
+				<dependency>
+					<groupId>org.postgresql</groupId>
+					<artifactId>postgresql</artifactId>
+					<version>${postgresql.version}</version>
+				</dependency>
+				<dependency>
+					<groupId>org.scala-lang</groupId>
+					<artifactId>scala-library</artifactId>
+					<version>${scala-lang.version}</version>
+				</dependency>
+				<dependency>
+					<groupId>org.scala-lang.modules</groupId>
+					<artifactId>scala-parser-combinators_2.11</artifactId>
+					<version>${scala-parser-combinators.version}</version>
+				</dependency>
+				<dependency>
+					<groupId>xerces</groupId>
+					<artifactId>xercesImpl</artifactId>
+					<version>${xerces.version}</version>
+				</dependency>
+				<dependency>
+					<groupId>redis.clients</groupId>
+					<artifactId>jedis</artifactId>
+					<version>${jedis.version}</version>
+				</dependency>
+				<dependency>
+					<groupId>org.quartz-scheduler</groupId>
+					<artifactId>quartz</artifactId>
+					<version>${quartz.version}</version>
+				</dependency>
+
+				<!-- dependency convergence -->
+				<dependency>
+					<groupId>org.glassfish.jaxb</groupId>
+					<artifactId>jaxb-runtime</artifactId>
+					<version>2.3.3</version>
+				</dependency>
+				<dependency>
+					<groupId>net.java.dev.jna</groupId>
+					<artifactId>jna</artifactId>
+					<version>5.8.0</version>
+				</dependency>
+				<dependency>
+					<groupId>org.immutables</groupId>
+					<artifactId>value</artifactId>
+					<version>2.8.8</version>
+				</dependency>
+				<dependency>
+					<groupId>org.jetbrains.kotlin</groupId>
+					<artifactId>kotlin-stdlib-jdk8</artifactId>
+					<version>1.4.30</version>
 				</dependency>
 			</dependencies>
 		</dependencyManagement>
