--- a/streampipes-integration-tests/pom.xml
+++ b/streampipes-integration-tests/pom.xml
@@ -32,11 +32,36 @@
   <artifactId>integration</artifactId>
   <name>StreamPipes Integration Tests</name>
 
+  <properties>
+    <owasp.check.skip>true</owasp.check.skip>
+    <maven.deploy.skip>false</maven.deploy.skip>
+
+    <pulsar.version>2.10.1</pulsar.version>
+  </properties>
+
   <dependencies>
+    <dependency>
+      <groupId>org.apache.streampipes</groupId>
+      <artifactId>streampipes-connect</artifactId>
+      <version>0.71.0-SNAPSHOT</version>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.apache.streampipes</groupId>
+      <artifactId>streampipes-container</artifactId>
+      <version>0.71.0-SNAPSHOT</version>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.apache.pulsar</groupId>
+      <artifactId>pulsar-client</artifactId>
+      <version>${pulsar.version}</version>
+    </dependency>
     <dependency>
       <groupId>org.apache.streampipes</groupId>
       <artifactId>streampipes-connect-adapters-iiot</artifactId>
       <version>0.71.0-SNAPSHOT</version>
+      <classifier>embed</classifier>
       <scope>test</scope>
     </dependency>
     <dependency>
